Added a sample web deployment

--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>moneta-core</module>
+  	<module>moneta-web</module>
   </modules>
 </project>
