Added dropwizard moneta deployment

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,6 @@
   <modules>
   	<module>moneta-core</module>
   	<module>moneta-web</module>
+  	<module>moneta-dropwizard</module>
   </modules>
 </project>
