Added contract testing project and dropwizard contract tests

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
   	<module>moneta-web</module>
   	<module>moneta-dropwizard</module>
   	<module>moneta-springboot</module>
+  	<module>moneta-contract-tests</module>
   </modules>
 </project>
