Refactored contract tests and added springboot and web deployment dependencies

--- a/moneta-contract-tests/pom.xml
+++ b/moneta-contract-tests/pom.xml
@@ -15,6 +15,16 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>moneta-springboot</groupId>
+			<artifactId>moneta-springboot</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>moneta-web</groupId>
+			<artifactId>moneta-web</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
