--- a/moneta-contract-tests/pom.xml
+++ b/moneta-contract-tests/pom.xml
@@ -23,6 +23,7 @@
 			<groupId>moneta-web</groupId>
 			<artifactId>moneta-web</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -42,5 +43,27 @@
 			<version>4.3.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.2.7.v20150116</version>
+			<scope>test</scope>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+			<scope>test</scope>
+		</dependency>
+-->
+
 	</dependencies>
 </project>
