--- a/moneta-core/pom.xml
+++ b/moneta-core/pom.xml
@@ -84,21 +84,31 @@
 			<version>2.5.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.codahale.metrics</groupId>
+			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			<version>3.0.2</version>
+			<version>3.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.codahale.metrics</groupId>
+			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-healthchecks</artifactId>
-			<version>3.0.1</version>
+			<version>3.1.0</version>
 		</dependency>
 		<dependency>
-            <groupId>com.codahale.metrics</groupId>
-            <artifactId>metrics-jvm</artifactId>
-            <version>3.0.2</version>
-        </dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-jvm</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>
 
+		<!-- <dependency> <groupId>com.codahale.metrics</groupId> <artifactId>metrics-core</artifactId> 
+			<version>3.0.2</version> </dependency> <dependency> <groupId>com.codahale.metrics</groupId> 
+			<artifactId>metrics-healthchecks</artifactId> <version>3.0.2</version> </dependency> 
+			<dependency> <groupId>com.codahale.metrics</groupId> <artifactId>metrics-jvm</artifactId> 
+			<version>3.0.2</version> </dependency> -->
 
 	</dependencies>
 
