--- a/moneta-dropwizard/pom.xml
+++ b/moneta-dropwizard/pom.xml
@@ -45,6 +45,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>
 
 
 	</dependencies>
