--- a/moneta-springboot/pom.xml
+++ b/moneta-springboot/pom.xml
@@ -52,6 +52,12 @@
 			<version>2.3.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
@@ -64,16 +70,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
-		          <execution>
-		          <!--  
-		            <id>default-package</id>
-		            <phase>clean</phase>
-		            -->
-		            <goals>
-		              <goal>repackage</goal>
-		            </goals>
-		          </execution>
-		        </executions>
+					<execution>
+						<!-- <id>default-package</id> <phase>clean</phase> -->
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
