--- a/moneta-web/pom.xml
+++ b/moneta-web/pom.xml
@@ -20,5 +20,11 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
