First cut performance metrics

--- a/moneta-core/pom.xml
+++ b/moneta-core/pom.xml
@@ -99,9 +99,26 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-servlet</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.6</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>net.admin4j</groupId>
+			<artifactId>admin4j</artifactId>
+			<version>1.0.3</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>com.codahale.metrics</groupId> <artifactId>metrics-core</artifactId> 
