--- a/moneta-dropwizard/pom.xml
+++ b/moneta-dropwizard/pom.xml
@@ -2,11 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>moneta</groupId>
+		<groupId>org.force66</groupId>
 		<artifactId>moneta</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${project.version}</version>
 	</parent>
-	<groupId>moneta-dropwizard</groupId>
 	<artifactId>moneta-dropwizard</artifactId>
 	<properties>
 		<dropwizard.version>0.8.0-rc2</dropwizard.version>
@@ -18,9 +17,14 @@
 			<version>${dropwizard.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>moneta-core</groupId>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-configuration</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.force66</groupId>
 			<artifactId>moneta-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
@@ -49,6 +53,16 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.force66</groupId>
+			<artifactId>RequestCorrelation-core</artifactId>
+			<version>1.0.0-rc2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.force66</groupId>
+			<artifactId>RequestCorrelation-logback</artifactId>
+			<version>1.0.0-rc2</version>
 		</dependency>
 
 
@@ -88,6 +102,30 @@
 								</transformer>
 							</transformers>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
