--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>moneta</groupId>
-  <artifactId>moneta</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>moneta-core</module>
-  	<module>moneta-web</module>
-  	<module>moneta-dropwizard</module>
-  	<module>moneta-springboot</module>
-  	<module>moneta-contract-tests</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.force66</groupId>
+	<artifactId>moneta</artifactId>
+	<version>${project.version}</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.version>0.0.1-SNAPSHOT</project.version>
+	</properties>
+
+	<packaging>pom</packaging>
+	<modules>
+		<module>moneta-core</module>
+		<module>moneta-web</module>
+		<module>moneta-dropwizard</module>
+		<module>moneta-springboot</module>
+		<module>moneta-contract-tests</module>
+	</modules>
 </project>
