installed transaction correlation id logging and version change to 0.9.0-alpha

--- a/moneta-contract-tests/src/main/resources/dropwizard/moneta-dropwizard.yaml
+++ b/moneta-contract-tests/src/main/resources/dropwizard/moneta-dropwizard.yaml
@@ -16,11 +16,6 @@ logging:
 
   appenders:
     - type: console
-    - type: file
       threshold: INFO
-      ##logFormat: "%-6level [%d{HH:mm:ss.SSS}] [%t] %logger{5} %id - %X{code} %msg %n"
-      logFormat: "%-6level [%d{HH:mm:ss.SSS}] [%t] %logger{5} - %X{code} %msg %n"
-      currentLogFilename: ${env.java.io.tmpdir}/application.log
-      archivedLogFilenamePattern: ${env.java.io.tmpdir}/application-%d{yyyy-MM-dd}.log
-      archivedFileCount: 7
+      logFormat: "%-6level [%d{HH:mm:ss.SSS}] [%t] %logger{5} %X{requestId} - %X{code} %msg %n"
       timeZone: UTC
