--- a/moneta-web/pom.xml
+++ b/moneta-web/pom.xml
@@ -36,8 +36,13 @@
 			<version>1.6.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.force66</groupId>
+			<artifactId>RequestCorrelationSlf4J</artifactId>
+			<version>1.0.0-rc1</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
