--- a/moneta-dropwizard/pom.xml
+++ b/moneta-dropwizard/pom.xml
@@ -56,13 +56,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.force66</groupId>
-			<artifactId>RequestCorrelation-core</artifactId>
-			<version>1.0.0-rc2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.force66</groupId>
-			<artifactId>RequestCorrelation-logback</artifactId>
-			<version>1.0.0-rc2</version>
+			<artifactId>RequestCorrelationSlf4J</artifactId>
+			<version>1.0.0-rc1</version>
 		</dependency>
 
 
