--- a/moneta-springboot/pom.xml
+++ b/moneta-springboot/pom.xml
@@ -106,6 +106,33 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<configuration>
+							<tasks>
+								<property environment="env" />
+								<mkdir dir="target/docker" />
+								<copy file="docker/Dockerfile-template"
+									tofile="target/docker/Dockerfile" />
+								<replace
+									file="target/docker/Dockerfile">
+									<replacefilter>
+										<replacetoken>#{project.version}</replacetoken>
+										<replacevalue>${project.version}</replacevalue>
+									</replacefilter>
+								</replace>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
