--- a/moneta-core/pom.xml
+++ b/moneta-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.force66</groupId>
 		<artifactId>moneta</artifactId>
-		<version>${project.version}</version>
+		<version>0.9.2-alpha</version>
 	</parent>
 	<artifactId>moneta-core</artifactId>
 	<dependencies>
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>org.force66</groupId>
 			<artifactId>BeanTester</artifactId>
-			<version>1.0.0-beta.5</version>
+			<version>1.0.0-rc.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -261,4 +261,5 @@
 			</plugin>
 		</plugins>
 	</reporting>
+	<version>0.9.2-alpha</version>
 </project>
