Installed Spotify Docker Maven plugin to produce Docker image artifact

--- a/moneta-springboot/docker/dockerfile
+++ b/moneta-springboot/docker/dockerfile
@@ -25,15 +25,12 @@ FROM java:7-jre
 MAINTAINER Derek C. Ashmore
 
 #  External volume definitions
-RUN mkdir /jarlib
 VOLUME /jarlib
-RUN mkdir /config
 VOLUME /config
-RUN mkdir /logs
 VOLUME /logs
 
-ENV MONETA_URL https://github.com/Derek-Ashmore/moneta/releases/download/moneta-#{project.version}/moneta-springboot-#{project.version}.jar
-RUN curl -SL "$MONETA_URL" -o moneta-springboot.jar
+# ENV MONETA_URL https://github.com/Derek-Ashmore/moneta/releases/download/moneta-#{project.version}/moneta-springboot-#{project.version}.jar
+# RUN curl -SL "$MONETA_URL" -o moneta-springboot.jar
 
 ENV CLASSPATH /config:/jarlib/*.jar:moneta-springboot.jar
 
