Updated version to 0.9.3-alpha; upgrade to Java 8

--- a/moneta-dropwizard/pom.xml
+++ b/moneta-dropwizard/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.force66</groupId>
 		<artifactId>moneta</artifactId>
-		<version>${project.version}</version>
+		<version>0.9.3-alpha</version>
 	</parent>
 	<artifactId>moneta-dropwizard</artifactId>
 	<properties>
