--- a/moneta-dropwizard/docker/Dockerfile-template
+++ b/moneta-dropwizard/docker/Dockerfile-template
@@ -20,7 +20,7 @@
 #			dropwizard
 #
 
-FROM java:7-jre
+FROM java:8-jre
 
 MAINTAINER Derek C. Ashmore
 
@@ -32,8 +32,9 @@ VOLUME /config
 RUN mkdir /logs
 VOLUME /logs
 
-ENV MONETA_URL https://github.com/Derek-Ashmore/moneta/releases/download/moneta-#{project.version}/moneta-dropwizard-#{project.version}.jar
-RUN curl -SL "$MONETA_URL" -o moneta-dropwizard.jar
+#ENV MONETA_URL https://github.com/Derek-Ashmore/moneta/releases/download/moneta-#{project.version}/moneta-dropwizard-#{project.version}.jar
+#RUN curl -SL "$MONETA_URL" -o moneta-dropwizard.jar
+ADD ../moneta-dropwizard-#{project.version}.jar moneta-dropwizard.jar
 
 ENV CLASSPATH /config:/jarlib/*.jar:moneta-dropwizard.jar
 
